clusters/labsV2/system/kube-prometheus-stack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: kube-prometheus-stack-prometheus
      port:
        number: 9090
  ingressClassName: tailscale
  tls:
  - hosts:
    - prometheus
